<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_control</name>
  <version>0.0.0</version>
  <description>A lightweight, modular ROS 2 Jazzy workspace package implementing a publisher/subscriber topology to simulate a basic autonomous rover obstacle avoidance mechanism.</description>
  <maintainer email="hridya7113@gmail.com">Hridya</maintainer>
  <author email="hridya7113@gmil.com">Hridya</author>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
